--- a/index-2.html
+++ b/index-2.html
@@ -7,7 +7,7 @@
     <title>Markone</title>
 </head>
 <body>
-<a href=" https://replit.com/@raghavchandra/Mark-1#index.js"></a>
+<a href=" https://replit.com/@raghavchandra/Mark-1?embed=1&output=1#index.js"></a>
    
     
 </body>
